--- a/style.css
+++ b/style.css
@@ -1,6 +1,65 @@
-
-.inter-font{
+.inter-font {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
+}
 
+* {
+  padding: 0;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+/* shared  */
+
+.max-width {
+  max-width: 1200px;
+}
+.white {
+  color: white;
+}
+.flex {
+  display: flex;
+}
+
+.common-button {
+  align-items: center;
+  gap: 10px;
+  color: white;
+  padding: 12px 16px;
+  border-radius: 20px;
+  background: linear-gradient(to right,#f7e93f, #fb09b4, #9100f8);
+  cursor: pointer;
+}
+.common-button:hover{
+  background: linear-gradient(to right,#3ff792, #292628d7, #009df8cb);
+
+}
+
+/* navbar edit */
+
+header {
+  background: rgba(26, 11, 46, 1);
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav span {
+  background: linear-gradient(to right,#f7e93f, #fb09b4, #9100f8);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+header ul {
+  gap: 34px;
+}
+header ul li {
+  list-style: none;
+}
+header ul li a {
+  color: white;
+  text-decoration: none;
 }
