--- a/style.css
+++ b/style.css
@@ -27,12 +27,15 @@
   color: white;
   padding: 12px 16px;
   border-radius: 20px;
-  background: linear-gradient(to right,#f7e93f, #fb09b4, #9100f8);
+  border-style: none;
+  background: linear-gradient(to right, #f7e93f, #fb09b4, #9100f8);
   cursor: pointer;
 }
-.common-button:hover{
-  background: linear-gradient(to right,#3ff792, #292628d7, #009df8cb);
-
+.common-button:hover {
+  background: linear-gradient(to right, #3ff792, #292628d7, #009df8cb);
+}
+.banner-button:hover {
+  background: linear-gradient(to right, #3ff792, #292628d7, #009df8cb);
 }
 
 /* navbar edit */
@@ -45,10 +48,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 16px;
 }
 
 nav span {
-  background: linear-gradient(to right,#f7e93f, #fb09b4, #9100f8);
+  background: linear-gradient(to right, #f7e93f, #fb09b4, #9100f8);
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -62,4 +66,99 @@ header ul li {
 header ul li a {
   color: white;
   text-decoration: none;
+}
+.hamberger {
+  display: none;
+}
+
+/* banner section */
+.banner-section {
+  background-image: url(./assets/hero-bg.png);
+  background-size: cover;
+  background-position: center;
+}
+
+
+.banner-container{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    padding-top: 101px;
+    padding-bottom: 101px;
+    
+}
+.banner-png1, .banner-png2{
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    
+}
+.banner-pictures{
+    position: relative;
+}
+.banner-png1{
+    /* border: 2px solid; */
+    margin-bottom: 40px;
+}
+.banner-png2{
+    /* border: 2px solid; */
+    position:absolute;
+    top: 43%;
+    left: 50%;
+    translate: -50% -50%;
+}
+.new{
+    background: #00FF88;
+    padding: 8px 16px;
+    border-radius: 20px;
+    max-width: 70px;
+    position: absolute;
+    left: 76%;
+    bottom: 85%;
+}
+.banner-button-container{
+    display: flex;
+    gap: 20px;
+}
+
+.banner-button{
+    color: #00FF88;
+    border: 2px solid #00FF88;
+    padding: 10px;
+    gap: 10px;
+    border-radius: 20px;
+    align-items: center;
+    cursor: pointer;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* responsive mediaquerie */
+
+@media screen and (max-width:576px) {
+    .none{
+        display: none;
+    }
+    .hamberger{
+        display: block;
+    }
+    .banner-section{
+        background-size: contain;
+        background-repeat: no-repeat    ;
+    }
 }
