--- a/style.css
+++ b/style.css
@@ -15,19 +15,18 @@
   max-width: 1200px;
 }
 .white {
-  color:#FFFFFF; 
-
+  color: #ffffff;
 }
 .color {
-  color:#FFFFFF;
+  color: #ffffff;
   font-size: 13px;
-  opacity: 0.7;  
-
+  opacity: 0.7;
 }
 .flex {
   display: flex;
 }
-header, .products {
+header,
+.products {
   background: rgba(26, 11, 46, 1);
 }
 
@@ -47,14 +46,13 @@ header, .products {
 .banner-button:hover {
   background: linear-gradient(to right, #3ff792, #292628d7, #009df8cb);
 }
-.center{
+.center {
   text-align: center;
 }
-.grid{
+.grid {
   display: grid;
 }
 /* navbar edit */
-
 
 .navbar {
   display: flex;
@@ -90,120 +88,214 @@ header ul li a {
   background-position: center;
 }
 
-
-.banner-container{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 100%;
-    padding-top: 101px;
-    padding-bottom: 101px;
-    
+.banner-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  padding-top: 101px;
+  padding-bottom: 101px;
 }
-.banner-png1, .banner-png2{
-    max-width: 100%;
-    height: auto;
-    vertical-align: middle;
-    
+.banner-png1,
+.banner-png2 {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
 }
-.banner-pictures{
-    position: relative;
+.banner-pictures {
+  position: relative;
 }
-.banner-png1{
-    /* border: 2px solid; */
-    margin-bottom: 40px;
+.banner-png1 {
+  /* border: 2px solid; */
+  margin-bottom: 40px;
 }
-.banner-png2{
-    /* border: 2px solid; */
-    position:absolute;
-    top: 43%;
-    left: 50%;
-    translate: -50% -50%;
+.banner-png2 {
+  /* border: 2px solid; */
+  position: absolute;
+  top: 43%;
+  left: 50%;
+  translate: -50% -50%;
 }
-.new{
-    background: #00FF88;
-    padding: 8px 16px;
-    border-radius: 20px;
-    max-width: 70px;
-    position: absolute;
-    left: 76%;
-    bottom: 85%;
+.new {
+  background: #00ff88;
+  padding: 8px 16px;
+  border-radius: 20px;
+  max-width: 70px;
+  position: absolute;
+  left: 76%;
+  bottom: 85%;
 }
-.banner-button-container{
-    display: flex;
-    gap: 20px;
+.banner-button-container {
+  display: flex;
+  gap: 20px;
 }
 
-.banner-button{
-    color: #00FF88;
-    border: 2px solid #00FF88;
-    padding: 10px;
-    gap: 10px;
-    border-radius: 20px;
-    align-items: center;
-    cursor: pointer;
-    
+.banner-button {
+  color: #00ff88;
+  border: 2px solid #00ff88;
+  padding: 10px;
+  gap: 10px;
+  border-radius: 20px;
+  align-items: center;
+  cursor: pointer;
 }
 
 /* main-section edit*/
 
 /* products */
-.products{
+.products {
   padding-top: 50px;
   padding-bottom: 120px;
 }
-.product-text{
+.product-text {
   max-width: 550px;
   line-height: 20px;
 }
-.product-gap{
+.product-gap {
   margin-top: 20px;
 }
-.ratting{
+.ratting {
   font-size: 2.5rem;
   font-weight: 900;
-  color: #00FF88;
+  color: #00ff88;
 }
-.ratting-section{
-   padding-top: 120px;
+.ratting-section {
+  padding-top: 120px;
   padding-bottom: 120px;
-  /* border: 2px solid; */
-  display:grid;
-  grid-template-columns: repeat(4,1fr);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
-.products-text-width{
+.products-text-width {
   width: 150px;
 }
 
+/* techwave grid */
 
+.techwave-grid {
+  background: #230e3d;
+  padding: 120px 2px;
+}
 
+.box1 {
+  grid-area: box1;
+}
+.box2 {
+  grid-area: box2;
+}
+.box3 {
+  grid-area: box3;
+}
+.box4 {
+  grid-area: box4;
+}
+.box5 {
+  grid-area: box5;
+}
+.techwave-grid-container {
+  margin-top: 30px;
+  gap: 20px;
+  display: grid;
+  grid-template-areas:
+    "box1 box2 box2"
+    "box1 box3 box3"
+    "box4 box4 box5";
+}
+.techwave-grid h1 {
+  text-align: center;
+  color: white;
+}
+.box {
+  background-color: #351165;
+  line-height: 24px;
+  width: 100%;
+  padding: 40px;
+  border-radius: 40px;
+}
+.box > img,
+.box h3 {
+  margin-bottom: 20px;
+}
 
+/* featured section */
 
+.featured-section {
+  background-color: rgba(26, 11, 46, 1);
+  padding: 120px 0;
+}
 
+.featured-container {
+  height: auto;
+  width: auto;
+  display: flex;
+  
+}
+.flex-of-featured{
+  display: flex;
+}
+.iframe-box {
+  max-width: 380px;
+  margin-top: 40px;
+  margin-bottom: 60px;
+  background-color: #250d44;
+  border-radius: 24px;
+  
+}
+.featured-padding {
+  padding: 24px;
+}
+.iframe-box > h2,p {
+  line-height: 24px;
+  margin-top: 34px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
 
-
-
-
-
+.green {
+  color: rgb(4, 252, 4);
+  margin-top: 0px;
+}
+.flex-item {
+  align-items: center;
+  justify-content:;
+  display: flex;
+  margin-top: 34px;
+  gap: 10px;
+}
+.flex-item > img {
+  margin: 0px;
+  width: 17px;
+  height: 17px;
+}
 
 /* responsive mediaquerie */
 
-@media screen and (max-width:576px) {
-    .none{
-        display: none;
-    }
-    .hamberger{
-        display: block;
-    }
-    .banner-section{
-        background-size: contain;
-        background-repeat: no-repeat    ;
-    }
-    
-    .ratting-section{
-      grid-template-columns: repeat(2,1fr);
-      padding-top: 40px;
-      padding-bottom: 40px;
-      row-gap: 50px;
-    }
+@media screen and (max-width: 576px) {
+  .none {
+    display: none;
+  }
+  .hamberger {
+    display: block;
+  }
+  .banner-section {
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  .ratting-section {
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 40px;
+    padding-bottom: 40px;
+    row-gap: 50px;
+  }
+  .techwave-grid-container {
+    grid-template-areas:
+      "box1 box1 box1"
+      "box2 box2 box2"
+      "box3 box3 box3"
+      "box4 box4 box4"
+      "box5 box5 box5";
+  }
+  .flex-of-featured{
+    flex-direction: column;
+  }
 }
